--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea/
 out/
-scrum/.~lock. # temporary file for libreoffice
+scrum/.~lock.* # temporary file for libreoffice
 
 # Compiled class file
 *.class
